ulthuan/apps/gathio/base/gathio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gathio-svc
  labels:
    app: gathio
spec:
  selector:
    app: gathio
  ports:
    - port: 80
      targetPort: 443
      protocol: TCP
  type: ClusterIP
